feat(donations): enhance physical & monetary donation processing workflow